--- a/pages/index.html
+++ b/pages/index.html
@@ -25,7 +25,7 @@
             <h2>A primeira versão</h2>
             <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
                 <picture>
-                    <source media="(max-width: 1000px)" srcset="/pacote-projeto-d010/imagens/dan-droids-pq.png" type="image/png" alt="Quatro robôs de cores diferentes como se estivessem hipnotizados.">
+                    <source media="(max-width: 1000px)" width="410" srcset="/pacote-projeto-d010/imagens/dan-droids-pq.png" type="image/png" alt="Quatro robôs de cores diferentes como se estivessem hipnotizados.">
                     <img class="imagens" id="droid"src="/pacote-projeto-d010/imagens/dan-droids.png" alt="Quatro robôs de cores diferentes como se estivessem hipnotizados.">
                 </picture>
             <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.</p>
@@ -39,7 +39,7 @@
             <img class="imagens" src="/pacote-projeto-d010/imagens/bugdroid.png" alt="Imagem do droid do sistema operacional Android verde de mãos dadas com uma pessoa de mesmos estilo de traços de benequinho de porta de banheiro.">
             <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
             <div id="video">
-                <iframe id="videoExternoAndroid" width="540" height="295" src="https://www.youtube.com/embed/5K4pEk19nhs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe id="videoExternoAndroid" width="400" height="285" src="https://www.youtube.com/embed/5K4pEk19nhs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
     </main>
     <footer>Site criado por Gustavo Guanabara para o CursoemVideo.</footer>
